Fixed alignment of contact labels.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -419,7 +419,7 @@ body {
 	
 	#slide-3 .col-12 {
 		height: auto;
-		width: 50%
+		width: 50%;
 	}
 
 	#slide-3 a,
